[package]
name = "multiplication-wasm"
version = "0.1.0"
authors = ["Judd Keppel <kepzorz@gmail.com>"]
edition = "2018"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
nomos-runtime = { path = "../nomos-runtime" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.0"
actions = { path = "../actions" }
