[package]
name = "nomos-runtime"
description = "Library for use in Nomos WASM programs"
version = "0.1.0"
authors = ["Judd <kepzorz@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.0"
