[package]
name = "nomos"
version = "0.1.0"
authors = ["Judd <kepzorz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
wasmer-runtime = { version = "0.5.7", features = ["singlepass"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.0"
actions = { path = "../actions"}
merk = "0.2.0"
