[package]
name = "nomos"
version = "0.1.0"
authors = ["Judd Keppel <kepzorz@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Self-upgrading WebAssembly runtime"


[dependencies]
byteorder = "1.3.2"
wasmer-runtime = { version = "0.5.7", features = ["singlepass"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.0"
nomos-runtime = "0.1.0" 

[dev-dependencies]
actions = { path = "../actions" }
